--- a/static/style.css
+++ b/static/style.css
@@ -3,9 +3,22 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+footer {
+  overflow: hidden;
+  background-color: #151A7B;
+}
+
+footer p {
+  color: #f2f2f2;
+}
+
+footer a {
+  color: #f2f2f2;
+}
+
 .topnav {
   overflow: hidden;
-  background-color: #61afe2;
+  background-color: #151A7B;
 }
 
 .topnav a {
@@ -15,6 +28,12 @@ body {
   padding: 14px 16px;
   text-decoration: none;
   font-size: 17px;
+}
+
+.topnav a.hover {
+  float: right;
+  text-align: center;
+  padding: 14px 16px;
 }
 
 .topnav b {
@@ -27,18 +46,17 @@ body {
 }
 
 .topnav b:hover {
-  background-color: #ddd;
+  background-color: rgb(71, 135, 232);
   color: black;
 }
 
 .topnav .hover:hover {
-  background-color: #ddd;
+  background-color: rgb(71, 135, 232);
   color: black;
 }
 
 .topnav a.active {
   background-color: #04AA6D;
-  color: white;
 }
 
 .profName:hover {
@@ -89,9 +107,49 @@ body {
 }
 
 .dropdown-content a:hover {
-  background-color: #ddd;
+  background-color: rgb(71, 135, 232);
 }
 
 .dropdown:hover .dropdown-content {
   display: block;
 }
+
+label {
+  display: block;
+  margin-bottom: 8px;
+  font-weight: bold;
+}
+
+input[type="number"] {
+  width: 100%;
+  padding: 8px;
+  margin-bottom: 16px;
+  box-sizing: border-box;
+}
+
+textarea {
+  width: 100%;
+  padding: 8px;
+  margin-bottom: 16px;
+  box-sizing: border-box;
+  resize: vertical; /* Allow vertical resizing */
+}
+
+button {
+  background-color: #4caf50;
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #45a049;
+}
+
+/* Style for the Select2 dropdown
+.select2-container--default .select2-selection--single {
+            border: 1px solid #ccc;
+            border-radius: 4px;
+} */
