--- a/static/style.css
+++ b/static/style.css
@@ -30,6 +30,10 @@ footer a {
   font-size: 17px;
 }
 
+.topnav img {
+  float: left;
+}
+
 .topnav a.hover {
   float: right;
   text-align: center;
