--- a/static/style.css
+++ b/static/style.css
@@ -169,7 +169,7 @@ textarea {
 }
 
 button {
-  background-color: #4caf50;
+  background-color: orange;
   color: #fff;
   padding: 10px 20px;
   border: none;
@@ -178,7 +178,7 @@ button {
 }
 
 button:hover {
-  background-color: #45a049;
+  background-color: orange;
 }
 
 .footnote {
